.aws/peerprep-stack-dev.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Peerprep AWS Cloudformation Stack v1.2.1

Parameters:
  EnvironmentName:
    Type: String
    Default: peerprep-dev
    Description: "A friendly environment name that will be used for namespacing all cluster resources. Example: staging, qa, or production"
  PrivateDNSNamespaceName:
    Type: String
    Default: peerprep-services
    Description: "The private DNS name that identifies the name that you want to use to locate your resources"
  MinContainers:
    Type: Number
    Default: 1
    Description: "Minimum number of ECS tasks per ECS service"
  MaxContainers:
    Type: Number
    Default: 3
    Description: "Maximum number of ECS tasks per ECS service"
  AutoScalingTargetValue:
    Type: Number
    Default: 90
    Description: "Target CPU utilization (%) for ECS services auto scaling"

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Generic"
        Parameters: 
          - EnvironmentName
          - PrivateDNSNamespaceName
      - 
        Label: 
          default: "ECS Service LB"
        Parameters: 
          - MinContainersECS
          - MaxContainersECS
          - AutoScalingTargetValueECS

Mappings:
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    PublicOne:
      CIDR: '10.0.0.0/24'
    PublicTwo:
      CIDR: '10.0.1.0/24'
    PublicThree:
      CIDR: '10.0.2.0/24'
    PrivateOne:
      CIDR: '10.0.100.0/24'
    PrivateTwo:
      CIDR: '10.0.101.0/24'
    PrivateThree:
      CIDR: '10.0.102.0/24'

Resources:
  #=================================== 
  # VPC and networks
  #=================================== 
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']

  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: true
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: true
  PublicSubnetThree:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicThree', 'CIDR']
      MapPublicIpOnLaunch: true

  PrivateSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateOne', 'CIDR']
  PrivateSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateTwo', 'CIDR']
  PrivateSubnetThree:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateThree', 'CIDR']

  InternetGateway:
    Type: AWS::EC2::InternetGateway
  GatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachement
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetThreeRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetThree
      RouteTableId: !Ref PublicRouteTable

  NatGatewayOneAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayTwoAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayThreeAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
        Domain: vpc
  NatGatewayOne:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayOneAttachment.AllocationId
      SubnetId: !Ref PublicSubnetOne
  NatGatewayTwo:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayTwoAttachment.AllocationId
      SubnetId: !Ref PublicSubnetTwo
  NatGatewayThree:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayThreeAttachment.AllocationId
      SubnetId: !Ref PublicSubnetThree
  PrivateRouteTableOne:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayOne
  PrivateRouteTableOneAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      SubnetId: !Ref PrivateSubnetOne
  PrivateRouteTableTwo:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayTwo
  PrivateRouteTableTwoAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      SubnetId: !Ref PrivateSubnetTwo
  PrivateRouteTableThree:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRouteThree:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayThree
  PrivateRouteTableThreeAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableThree
      SubnetId: !Ref PrivateSubnetThree

  #=================================== 
  # IAM Roles
  #=================================== 
  AutoScalingRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['', [!Ref EnvironmentName, '-AutoScalingRole']]
      Description: Authorize to manage auto scaling resources
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole'

  ECSRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSRole']]
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              - 'ec2:AttachNetworkInterface'
              - 'ec2:CreateNetworkInterface'
              - 'ec2:CreateNetworkInterfacePermission'
              - 'ec2:DeleteNetworkInterface'
              - 'ec2:DeleteNetworkInterfacePermission'
              - 'ec2:Describe*'
              - 'ec2:DetachNetworkInterface'

              - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
              - 'elasticloadbalancing:DeregisterTargets'
              - 'elasticloadbalancing:Describe*'
              - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
              - 'elasticloadbalancing:RegisterTargets'
            Resource: '*'

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSTaskExecutionRole']]
      Description: Authorize to execute tasks
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                # Allow the ECS Tasks to download images from ECR
                - 'ecr:GetAuthorizationToken'
                - 'ecr:BatchCheckLayerAvailability'
                - 'ecr:GetDownloadUrlForLayer'
                - 'ecr:BatchGetImage'

                # Allow the ECS tasks to upload logs to CloudWatch
                - 'logs:CreateLogStream'
                - 'logs:PutLogEvents'
              Resource: '*'

  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSTaskRole']]
      Description: Authorize to initialize task definition
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: AmazonECSTaskRolePolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                # Allow the ECS tasks to create log group to CloudWatch
                - 'logs:CreateLogGroup'
              Resource: '*'
  
  #=================================== 
  # ECS Cluster
  #=================================== 
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Join ['', [!Ref EnvironmentName, '-ECSCluster']]

  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['', [!Ref EnvironmentName, '-ContainerSecurityGroup']]
      GroupDescription: Access to the Fargate containers
      VpcId: !Ref 'VPC'

  ContainerSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: !Join [' ', [!Ref EnvironmentName, 'ContainerSecurityGroupSelfIngress']]
      GroupId: !Ref ContainerSecurityGroup
      SourceSecurityGroupId: !Ref ContainerSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80

  #=================================== 
  # ECS Namespaces
  #=================================== 
  PrivateDNSNamespace:
    Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'
    Properties:
      Vpc: !Ref VPC
      Name: !Ref PrivateDNSNamespaceName

  ServiceDiscoveryServiceQuestion:
    Type: 'AWS::ServiceDiscovery::Service'
    Properties:
      DnsConfig:
        DnsRecords:
          - Type: SRV
            TTL: 60
        NamespaceId: !Ref PrivateDNSNamespace
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceQuestion']]

  ServiceDiscoveryServiceMatching:
    Type: 'AWS::ServiceDiscovery::Service'
    Properties:
      DnsConfig:
        DnsRecords:
          - Type: SRV
            TTL: 60
        NamespaceId: !Ref PrivateDNSNamespace
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceMatching']]

  ServiceDiscoveryServiceUser:
    Type: 'AWS::ServiceDiscovery::Service'
    Properties:
      DnsConfig:
        DnsRecords:
          - Type: SRV
            TTL: 60
        NamespaceId: !Ref PrivateDNSNamespace
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceUser']]

  ServiceDiscoveryServiceAuth:
    Type: 'AWS::ServiceDiscovery::Service'
    Properties:
      DnsConfig:
        DnsRecords:
          - Type: SRV
            TTL: 60
        NamespaceId: !Ref PrivateDNSNamespace
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceAuth']]

  # ServiceDiscoveryServiceCollaboration:
  #   Type: 'AWS::ServiceDiscovery::Service'
  #   Properties:
  #     DnsConfig:
  #       DnsRecords:
  #         - Type: SRV
  #           TTL: 60
  #       NamespaceId: !Ref PrivateDNSNamespace
  #     HealthCheckCustomConfig:
  #       FailureThreshold: 1
  #     Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceCollaboration']]

  # ServiceDiscoveryServiceHistory:
  #   Type: 'AWS::ServiceDiscovery::Service'
  #   Properties:
  #     DnsConfig:
  #       DnsRecords:
  #         - Type: SRV
  #           TTL: 60
  #       NamespaceId: !Ref PrivateDNSNamespace
  #     HealthCheckCustomConfig:
  #       FailureThreshold: 1
  #     Name: !Join ['', [!Ref EnvironmentName, '-ServiceDiscoveryServiceHistory']]

  #=================================== 
  # ECS Services
  #=================================== 
  ServiceQuestion:
    Type: AWS::ECS::Service
    DependsOn:
      - PrivateRouteOne
      - PrivateRouteTwo
      - PrivateRouteThree
    Properties: 
      ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceQuestion']]
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinitionQuestion
      LaunchType: FARGATE
      DesiredCount: 1
      ServiceRegistries:
        - RegistryArn: !GetAtt ServiceDiscoveryServiceQuestion.Arn
          Port: 80
      NetworkConfiguration:
          AwsvpcConfiguration:
            AssignPublicIp: DISABLED
            Subnets:
              - !Ref PrivateSubnetOne
              - !Ref PrivateSubnetTwo
              - !Ref PrivateSubnetThree
            SecurityGroups:
              - !Ref ContainerSecurityGroup

  ServiceMatching: 
    Type: AWS::ECS::Service
    DependsOn:
      - PrivateRouteOne
      - PrivateRouteTwo
      - PrivateRouteThree
    Properties: 
      ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceMatching']]
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinitionMatching
      LaunchType: FARGATE
      DesiredCount: 1
      ServiceRegistries:
        - RegistryArn: !GetAtt ServiceDiscoveryServiceMatching.Arn
          Port: 80
      NetworkConfiguration:
          AwsvpcConfiguration:
            AssignPublicIp: DISABLED
            Subnets:
              - !Ref PrivateSubnetOne
              - !Ref PrivateSubnetTwo
              - !Ref PrivateSubnetThree
            SecurityGroups:
              - !Ref ContainerSecurityGroup
  
  ServiceUser: 
    Type: AWS::ECS::Service
    DependsOn:
      - PrivateRouteOne
      - PrivateRouteTwo
      - PrivateRouteThree
    Properties: 
      ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceUser']]
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinitionUser
      LaunchType: FARGATE
      DesiredCount: 1
      ServiceRegistries:
        - RegistryArn: !GetAtt ServiceDiscoveryServiceUser.Arn
          Port: 80
      NetworkConfiguration:
          AwsvpcConfiguration:
            AssignPublicIp: DISABLED
            Subnets:
              - !Ref PrivateSubnetOne
              - !Ref PrivateSubnetTwo
              - !Ref PrivateSubnetThree
            SecurityGroups:
              - !Ref ContainerSecurityGroup

  ServiceAuth: 
    Type: AWS::ECS::Service
    DependsOn:
      - PrivateRouteOne
      - PrivateRouteTwo
      - PrivateRouteThree
    Properties: 
      ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceAuth']]
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref TaskDefinitionAuth
      LaunchType: FARGATE
      DesiredCount: 1
      ServiceRegistries:
        - RegistryArn: !GetAtt ServiceDiscoveryServiceAuth.Arn
          Port: 80
      NetworkConfiguration:
          AwsvpcConfiguration:
            AssignPublicIp: DISABLED
            Subnets:
              - !Ref PrivateSubnetOne
              - !Ref PrivateSubnetTwo
              - !Ref PrivateSubnetThree
            SecurityGroups:
              - !Ref ContainerSecurityGroup

  # ServiceCollaboration: 
  #   Type: AWS::ECS::Service
  #   DependsOn:
  #     - PrivateRouteOne
  #     - PrivateRouteTwo
  #     - PrivateRouteThree
  #   Properties: 
  #     ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceCollaboration']]
  #     Cluster: !Ref ECSCluster
  #     TaskDefinition: !Ref TaskDefinitionCollaboration
  #     LaunchType: FARGATE
  #     DesiredCount: 1
  #     ServiceRegistries:
  #       - RegistryArn: !GetAtt ServiceDiscoveryServiceCollaboration.Arn
  #         Port: 80
  #     NetworkConfiguration:
  #         AwsvpcConfiguration:
  #           AssignPublicIp: DISABLED
  #           Subnets:
  #             - !Ref PrivateSubnetOne
  #             - !Ref PrivateSubnetTwo
  #             - !Ref PrivateSubnetThree
  #           SecurityGroups:
  #             - !Ref ContainerSecurityGroup

  # ServiceHistory: 
  #   Type: AWS::ECS::Service
  #   DependsOn:
  #     - PrivateRouteOne
  #     - PrivateRouteTwo
  #     - PrivateRouteThree
  #   Properties: 
  #     ServiceName: !Join ['', [!Ref EnvironmentName, '-ServiceHistory']]
  #     Cluster: !Ref ECSCluster
  #     TaskDefinition: !Ref TaskDefinitionHistory
  #     LaunchType: FARGATE
  #     DesiredCount: 1
  #     ServiceRegistries:
  #       - RegistryArn: !GetAtt ServiceDiscoveryServiceHistory.Arn
  #         Port: 80
  #     NetworkConfiguration:
  #         AwsvpcConfiguration:
  #           AssignPublicIp: DISABLED
  #           Subnets:
  #             - !Ref PrivateSubnetOne
  #             - !Ref PrivateSubnetTwo
  #             - !Ref PrivateSubnetThree
  #           SecurityGroups:
  #             - !Ref ContainerSecurityGroup

  #=================================== 
  # ECS Task definitions
  #=================================== 
  TaskDefinitionQuestion:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionQuestion']]
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
          - Name: 'question-service'
            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':question-service']]
            Essential: true
            PortMappings:
              - ContainerPort: 80
                Protocol: tcp
            Environment:
              - Name: SERVICE_PORT
                Value: 80
              - Name: GATEWAY
                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
            LogConfiguration: 
              LogDriver: awslogs
              Options:
                awslogs-create-group: true
                awslogs-group: !Join ["", [!Ref EnvironmentName, '-question-service']]
                awslogs-region: !Ref AWS::Region
                awslogs-stream-prefix: ecs
      NetworkMode: awsvpc
      Memory: '512'
      Cpu: '256'

  TaskDefinitionMatching:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionMatching']]
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
          - Name: 'matching-service'
            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':matching-service']]
            Essential: true
            PortMappings:
              - ContainerPort: 80
                Protocol: tcp
            Environment:
              - Name: SERVICE_PORT
                Value: 80
              - Name: GATEWAY
                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
            LogConfiguration: 
              LogDriver: awslogs
              Options:
                awslogs-create-group: true
                awslogs-group: !Join ["", [!Ref EnvironmentName, '-matching-service']]
                awslogs-region: !Ref AWS::Region
                awslogs-stream-prefix: ecs
      NetworkMode: awsvpc
      Memory: '512'
      Cpu: '256'

  TaskDefinitionUser:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionUser']]
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
          - Name: 'user-service'
            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':user-service']]
            Essential: true
            PortMappings:
              - ContainerPort: 80
                Protocol: tcp
            Environment:
              - Name: SERVICE_PORT
                Value: 80
              - Name: GATEWAY
                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
            LogConfiguration: 
              LogDriver: awslogs
              Options:
                awslogs-create-group: true
                awslogs-group: !Join ["", [!Ref EnvironmentName, '-user-service']]
                awslogs-region: !Ref AWS::Region
                awslogs-stream-prefix: ecs
      NetworkMode: awsvpc
      Memory: '512'
      Cpu: '256'

  TaskDefinitionAuth:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionAuth']]
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
          - Name: 'auth-service'
            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':auth-service']]
            Essential: true
            PortMappings:
              - ContainerPort: 80
                Protocol: tcp
            Environment:
              - Name: SERVICE_PORT
                Value: 80
              - Name: GATEWAY
                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
            LogConfiguration: 
              LogDriver: awslogs
              Options:
                awslogs-create-group: true
                awslogs-group: !Join ["", [!Ref EnvironmentName, '-auth-service']]
                awslogs-region: !Ref AWS::Region
                awslogs-stream-prefix: ecs
      NetworkMode: awsvpc
      Memory: '512'
      Cpu: '256'

  # TaskDefinitionCollaboration:
  #   Type: 'AWS::ECS::TaskDefinition'
  #   Properties:
  #     Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionCollaboration']]
  #     TaskRoleArn: !GetAtt ECSTaskRole.Arn
  #     ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
  #     RequiresCompatibilities:
  #       - FARGATE
  #     ContainerDefinitions:
  #         - Name: 'collaboration-service'
  #           Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':collaboration-service']]
  #           Essential: true
  #           PortMappings:
  #             - ContainerPort: 80
  #               Protocol: tcp
  #           Environment:
  #             - Name: SERVICE_PORT
  #               Value: 80
  #           LogConfiguration: 
  #             LogDriver: awslogs
  #             Options:
  #               awslogs-create-group: true
  #               awslogs-group: !Join ["", [!Ref EnvironmentName, '-collaboration-service']]
  #               awslogs-region: !Ref AWS::Region
  #               awslogs-stream-prefix: ecs
  #     NetworkMode: awsvpc
  #     Memory: '512'
  #     Cpu: '256'

  # TaskDefinitionHistory:
  #   Type: 'AWS::ECS::TaskDefinition'
  #   Properties:
  #     Family: !Join ['', [!Ref EnvironmentName, '-TaskDefinitionHistory']]
  #     TaskRoleArn: !GetAtt ECSTaskRole.Arn
  #     ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
  #     RequiresCompatibilities:
  #       - FARGATE
  #     ContainerDefinitions:
  #         - Name: 'history-service'
  #           Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':history-service']]
  #           Essential: true
  #           PortMappings:
  #             - ContainerPort: 80
  #               Protocol: tcp
  #           Environment:
  #             - Name: SERVICE_PORT
  #               Value: 80
  #           LogConfiguration: 
  #             LogDriver: awslogs
  #             Options:
  #               awslogs-create-group: true
  #               awslogs-group: !Join ["", [!Ref EnvironmentName, '-history-service']]
  #               awslogs-region: !Ref AWS::Region
  #               awslogs-stream-prefix: ecs
  #     NetworkMode: awsvpc
  #     Memory: '512'
  #     Cpu: '256'

  #=================================== 
  # ECR Image Repo
  #=================================== 
  ECRContainerRepo:
    Type: "AWS::ECR::Repository"
    Properties:
        RepositoryName: !Join ['', [!Ref EnvironmentName, '-ecr-container-repo']]
        EmptyOnDelete: true
        LifecyclePolicy:
            LifecyclePolicyText: "{\"rules\":[{\"rulePriority\":1,\"description\":\"remove old images\",\"selection\":{\"tagStatus\":\"untagged\",\"countType\":\"imageCountMoreThan\",\"countNumber\":5},\"action\":{\"type\":\"expire\"}}]}"

  #=================================== 
  # ECS Autoscaling
  #=================================== 
  AutoScalingTargetQuestion:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: !Ref MinContainers
      MaxCapacity: !Ref MaxContainers
      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceQuestion.Name]]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt AutoScalingRole.Arn

  AutoScalingTargetMatching:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: !Ref MinContainers
      MaxCapacity: !Ref MaxContainers
      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceMatching.Name]]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt AutoScalingRole.Arn

  AutoScalingTargetAuth:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: !Ref MinContainers
      MaxCapacity: !Ref MaxContainers
      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceAuth.Name]]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt AutoScalingRole.Arn

  AutoScalingTargetUser:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: !Ref MinContainers
      MaxCapacity: !Ref MaxContainers
      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceUser.Name]]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt AutoScalingRole.Arn

  AutoScalingPolicyQuestion:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Join ['', [!GetAtt ServiceQuestion.Name, '-AutoScalingPolicy']]
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref AutoScalingTargetQuestion
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: !Ref AutoScalingTargetValue

  AutoScalingPolicyMatching:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Join ['', [!GetAtt ServiceMatching.Name, '-AutoScalingPolicy']]
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref AutoScalingTargetMatching
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: !Ref AutoScalingTargetValue

  AutoScalingPolicyAuth:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Join ['', [!GetAtt ServiceAuth.Name, '-AutoScalingPolicy']]
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref AutoScalingTargetAuth
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: !Ref AutoScalingTargetValue
  
  AutoScalingPolicyUser:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Join ['', [!GetAtt ServiceUser.Name, '-AutoScalingPolicy']]
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref AutoScalingTargetUser
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: !Ref AutoScalingTargetValue

  #=================================== 
  # Cognito 
  #=================================== 
  UserPool:
    Type: AWS::Cognito::UserPool
    Properties:
      UsernameAttributes:
        - email
      AutoVerifiedAttributes:
        - email
  
  UserPoolClient:
    Type: "AWS::Cognito::UserPoolClient"
    Properties:
      UserPoolId: !Ref UserPool
      GenerateSecret: false
      SupportedIdentityProviders:
        - COGNITO
      PreventUserExistenceErrors: ENABLED

  #=================================== 
  # API Gateway 
  #=================================== 
  HttpApi:
    Type: "AWS::ApiGatewayV2::Api"
    Properties:
      Name: !Join ['', [!Ref EnvironmentName, '-HttpApi']]
      ProtocolType: "HTTP"
      RouteSelectionExpression: "$request.method $request.path"
      CorsConfiguration: 
        AllowHeaders: 
        - "*"
        AllowMethods: 
        - "PUT"
        - "GET"
        - "POST"
        - "DELETE"
        AllowOrigins: 
        - "https://master.d2wfcislijzove.amplifyapp.com"
        - "https://development.d2wfcislijzove.amplifyapp.com"
        - "https://production.d2wfcislijzove.amplifyapp.com/"
        - "http://localhost:3000"
      DisableExecuteApiEndpoint: false

  # Route for Question
  RouteQuestionApiHealth:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /question/api/health"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiTopics:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /question/api/topics"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiQuestions:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /question/api/questions"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiQuestionById:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /question/api/questions/{questionId}"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiPostQuestion:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "POST /question/api/questions"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiUpdateQuestion:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "PUT /question/api/questions/{questionId}"
      Target: !Sub "integrations/${IntegrationQuestion}"
  RouteQuestionApiDeleteQuestion:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "DELETE /question/api/questions/{questionId}"
      Target: !Sub "integrations/${IntegrationQuestion}"

  # Route for matching
  RouteMatchingSocket:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "ANY /matching/socket/{proxy}"
      Target: !Sub "integrations/${IntegrationMatching}"
  RouteMatchingApiStatus:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /matching/api/status"
      Target: !Sub "integrations/${IntegrationMatching}"
  RouteMatchingApiHealth:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /matching/api/health"
      Target: !Sub "integrations/${IntegrationMatching}"

  # Route for Auth 
  RouteAuthApiHealth:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /auth/api/health"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiRegisterByEmail:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "POST /auth/api/registerByEmail"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiLoginByEmail:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "POST /auth/api/loginByEmail"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiValidate:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "POST /auth/api/validate"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiValidateAdmin:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "POST /auth/api/validateAdmin"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiLogout:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "POST /auth/api/logout"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiVerifyEmail:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "PUT /auth/api/verifyEmail/{email}/{token}"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiSendPasswordResetEmail:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "PUT /auth/api/sendPasswordResetEmail/{email}"
      Target: !Sub "integrations/${IntegrationAuth}"
  RouteAuthApiChangePassword:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      RouteKey: "PUT /auth/api/changePassword/{id}"
      Target: !Sub "integrations/${IntegrationAuth}"


  # Route for User 
  RouteUserApiHealth:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /user/api/health"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiEmail:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /user/api/users/email"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUserById:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /user/api/users/{userId}"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUserPreferences:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "GET /user/api/users/{userId}/preferences"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUpdateUserPreferences:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "PUT /user/api/users/{userId}/preferences"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiPostUser:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "POST /user/api/users"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUpdateUserById:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "PUT /user/api/users/{userId}"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUpdateVerification:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "PUT /user/api/users/updateVerification/{email}"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiUpdatePasswordResetToken:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "PUT /user/api/users/updatePasswordResetToken/{email}"
      Target: !Sub "integrations/${IntegrationUser}"
  RouteUserApiDeleteUserById:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref HttpApi
      ApiKeyRequired: false
      AuthorizationType: "NONE"
      RequestParameters: {}
      RouteKey: "DELETE /user/api/users/{userId}"
      Target: !Sub "integrations/${IntegrationUser}"

  IntegrationQuestion:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref HttpApi
      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationQuestion']] 
      ConnectionType: "VPC_LINK"
      ConnectionId: !Ref HttpApiVPCLink
      IntegrationMethod: "ANY"
      IntegrationType: "HTTP_PROXY"
      IntegrationUri: !GetAtt ServiceDiscoveryServiceQuestion.Arn
      PayloadFormatVersion: '1.0'
  IntegrationMatching:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref HttpApi
      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationMatching']] 
      ConnectionType: "VPC_LINK"
      ConnectionId: !Ref HttpApiVPCLink
      IntegrationMethod: "ANY"
      IntegrationType: "HTTP_PROXY"
      IntegrationUri: !GetAtt ServiceDiscoveryServiceMatching.Arn
      PayloadFormatVersion: '1.0'
  IntegrationAuth:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref HttpApi
      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationAuth']] 
      ConnectionType: "VPC_LINK"
      ConnectionId: !Ref HttpApiVPCLink
      IntegrationMethod: "ANY"
      IntegrationType: "HTTP_PROXY"
      IntegrationUri: !GetAtt ServiceDiscoveryServiceAuth.Arn
      PayloadFormatVersion: '1.0'
  IntegrationUser:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref HttpApi
      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationUser']] 
      ConnectionType: "VPC_LINK"
      ConnectionId: !Ref HttpApiVPCLink
      IntegrationMethod: "ANY"
      IntegrationType: "HTTP_PROXY"
      IntegrationUri: !GetAtt ServiceDiscoveryServiceUser.Arn
      PayloadFormatVersion: '1.0'

  HttpApiProductionStage:
    Type: 'AWS::ApiGatewayV2::Stage'
    Properties:
      StageName: 'production'
      ApiId: !Ref 'HttpApi'
      AutoDeploy: false
  HttpApiDevelopmentStage:
    Type: 'AWS::ApiGatewayV2::Stage'
    Properties:
      StageName: 'development'
      ApiId: !Ref 'HttpApi'
      AutoDeploy: true   

  HttpApiVPCLink:
    Type: AWS::ApiGatewayV2::VpcLink
    Properties: 
      Name: !Join ['', [!Ref EnvironmentName, '-vpclink']] 
      SecurityGroupIds: 
        - !Ref ContainerSecurityGroup
      SubnetIds: 
        - !Ref PrivateSubnetOne
        - !Ref PrivateSubnetTwo
        - !Ref PrivateSubnetThree

Outputs:
  # APITestPage:
  #   Description: The URL of the sample web app client, used to test the sample API
  #   Value: !Join
  #     - ''
  #     - - "https://master.d2wfcislijzove.amplifyapp.com/?stackregion="
  #       - !Ref 'AWS::Region'
  #       - "&stackhttpapi="
  #       - !Ref 'HttpApi'
  #       - "&stackuserpool="
  #       - !Ref 'UserPool'
  #       - "&stackuserpoolclient="
  #       - !Ref 'UserPoolClient'
  APIInvokeURL:
    Description: Invoke URL for the HTTP API
    Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
  APIId:
    Description: The ID of the HTTP API
    Value: !Ref 'HttpApi'
  ECSContainerRepo:
    Description: The name of the ECR repo
    Value: !Ref 'ECRContainerRepo'
  ECSClusterName:
    Description: The name of the ECS cluster
    Value: !Ref 'ECSCluster'
  ServiceQuestionName:
    Description: The name of the ECS Service Question
    Value: !Ref 'ServiceQuestion'
  ServiceMatchingName:
    Description: The name of the ECS Service Matching
    Value: !Ref 'ServiceMatching'
  ServiceUserName:
    Description: The name of the ECS Service User
    Value: !Ref 'ServiceUser'
  ServiceAuthName:
    Description: The name of the ECS Service Auth
    Value: !Ref 'ServiceAuth'
  # ServiceCollaborationName:
  #   Description: The name of the ECS Service Collaboration
  #   Value: !Ref 'ServiceCollaboration'
  # ServiceHistoryName:
  #   Description: The name of the ECS Service History
  #   Value: !Ref 'ServiceHistory'
  VpcId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref 'VPC'
  ContainerSecurityGroup:
    Description: A security group used to allow Fargate containers to receive traffic
    Value: !Ref 'ContainerSecurityGroup'
  PrivateDNSNamespace:
    Description: The ID of the private DNS namespace.
    Value: !Ref 'PrivateDNSNamespace'
